# agi

./: .bazelrc  .gitignore  .project  404.html  BUILD.bazel  BUILDING.md  CNAME  CONTRIBUTING.md  DEVDOC.md  README.md  WORKSPACE  _config.yml  about.md  cli.md  coming-soon.md  commands-pane.md  devices.md  download.md  extensions.md  framebuffer-pane.md  geometry-pane.md  getting-started.md  go.mod  go.sum  gpu-counters-arm.md  gpu-counters-img.md  gpu-counters-qc.md  gpu-counters.md  index.md  inspect.md  install.md  memory-pane.md  report-pane.md  requirements.md  requirements.txt  shaders-pane.md  state-pane.md  textures-pane.md  trace.md  troubleshooting.md  (+11 more)
_data/: nav.yml
_includes/: banner.html  footer.html  head.html  sidebar.html
_layouts/: default.html  empty.html  home.html
assets/: banner.scss  footer.scss  home.scss  image.scss  images.js  main.scss  sidebar.scss
cmd/agi/: BUILD.bazel  main.go
cmd/apic/: BUILD.bazel  binary.go  encoders.go  format.go  main.go  resolve.go  template.go  validate.go
cmd/benchmark/: BUILD.bazel  main.go
cmd/device-info/: BUILD.bazel  main.cpp
cmd/dump-manifest/: BUILD.bazel  main.go
cmd/embed/: BUILD.bazel  main.go
cmd/enum_lookup/: BUILD.bazel  main.go
cmd/filehash/: BUILD.bazel  main.go
cmd/font-gen/: BUILD.bazel
cmd/gapis/: BUILD.bazel  main.go
cmd/gapit/: BUILD.bazel  benchmark.go  coarse_profile.go  commands.go  common.go  create_graph_visualization.go  devices.go  dump.go  dump_fbo.go  dump_pipeline.go  dump_replay.go  dump_shaders.go  export_replay.go  flags.go  framegraph.go  inputs.go  main.go  make_doc.go  memory.go  packages.go  perfetto.go  profile.go  replace_resource.go  report.go  screenshot.go  server_performance.go  split.go  (+11 more)
cmd/gofuse/: BUILD.bazel
cmd/launch_producer/: BUILD.bazel
cmd/linearize_trace/: BUILD.bazel  main.go
cmd/make-debuggable/: BUILD.bazel  main.go
cmd/stringgen/: BUILD.bazel  main.go  stringdefgo.tmpl  template.go
core/assert/: BUILD.bazel  assertion.go  boolean_test.go  enum_test.go  error_test.go  float_test.go  integer_test.go  manager.go  manager_test.go  map.go  map_test.go  slice.go  slice_test.go  string_test.go  time_test.go  value.go  value_test.go
gapic/: BUILD.bazel  README.md
gapic/res/: BUILD.bazel
gapic/src/main/: BUILD.bazel
gapic/src/main/com/google/gapid/: GraphicsTraceView.java  Main.java  MainWindow.java  Server.java  settings.proto
gapic/src/main/com/google/gapid/image/: ArrayImage.java  Histogram.java  Images.java
gapic/src/main/com/google/gapid/models/: Analytics.java  Capture.java  CommandStream.java  ConstantSets.java  Devices.java  Follower.java  Geometries.java  ImagesModel.java  Memory.java  ModelBase.java  Models.java  Perfetto.java  Profile.java  ProfileExperiments.java  Resources.java  Settings.java  TraceTargets.java
gapic/src/main/com/google/gapid/perfetto/: TraceView.java  Unit.java
gapic/src/main/com/google/gapid/perfetto/canvas/: Panel.java  RenderContext.java
gapic/src/main/com/google/gapid/perfetto/models/: BatterySummaryTrack.java  CounterInfo.java  CounterTrack.java  CpuSummaryTrack.java  CpuTrack.java  FrameEventsTrack.java  FrameInfo.java  GpuInfo.java  MemorySummaryTrack.java  PowerSummaryTrack.java  ProcessSummaryTrack.java  Selection.java  SliceTrack.java  ThreadTrack.java  TrackConfig.java  Tracks.java  VulkanEventTrack.java
gapic/src/main/com/google/gapid/perfetto/views/: BatterySummaryPanel.java  CounterPanel.java  CpuPanel.java  CpuSliceSelectionView.java  CpuSlicesSelectionView.java  CpuSummaryPanel.java  EnergyBreakdownPanel.java  EnergyBreakdownSelectionView.java  FilterDialog.java  FrameEventsMultiSelectionView.java  FrameEventsSelectionView.java  FrameEventsSummaryPanel.java  FuchsiaTraceConfigDialog.java  GpuQueuePanel.java  MemorySummaryPanel.java  MultiSelectionView.java  PowerSummaryPanel.java  ProcessMemoryPanel.java  ProcessSummaryPanel.java  RootPanel.java  SliceSelectionView.java  SlicesSelectionView.java  State.java  StyleConstants.java  ThreadPanel.java  ThreadStateSliceSelectionView.java  ThreadStateSlicesSelectionView.java  TimelinePanel.java  TraceComposite.java  TraceConfigDialog.java  TrackContainer.java  TrackSelector.java  VulkanEventPanel.java  VulkanEventSelectionView.java  VulkanEventsSelectionView.java
gapic/src/main/com/google/gapid/server/: ChildProcess.java  Client.java  GapisConnection.java  Tracer.java
gapic/src/main/com/google/gapid/util/: Colors.java  Flags.java  Messages.java  Paths.java  Streams.java  URLs.java
gapic/src/main/com/google/gapid/views/: CommandOptions.java  CommandTree.java  DeviceDialog.java  DeviceValidationView.java  Experiments.java  Formatter.java  FramebufferView.java  GeometryView.java  LogView.java  MemoryView.java  PerformanceView.java  PipelineView.java  ProfileView.java  ReportView.java  SettingsDialog.java  ShaderList.java  ShaderView.java  StateView.java  StatusBar.java  TabContent.java  TextureList.java  TextureView.java  TracerDialog.java
gapic/src/main/com/google/gapid/widgets/: ImagePanel.java  LinkifiedTree.java  LoadingIndicator.java  TabArea.java  TabComposite.java  Theme.java  Widgets.java
gapic/src/platform/linux/com/google/gapid/glcanvas/: GlCanvas.java
gapidapk/: BUILD.bazel  deviceinfo.go  gapidapk.go  packageinfo.go
gapii/fuchsia/: BUILD.bazel  gapii-server.cml  gapii_server.cc
gapil/: BUILD.bazel  api.go
gapir/: BUILD.bazel  api.go
gapis/trace/android/gpu_performance/: BUILD.bazel  gpu_performance.go
gapis/trace/android/utils/: BUILD.bazel  utils.go
kokoro/: README.md
replay2/memory_remapper/: BUILD.bazel  address_range.cc  address_range.h  capture_address.cc  capture_address.h  memory_observation.cc  memory_observation.h  memory_remapper.cc  memory_remapper.h  replay_address.cc  replay_address.h  resource_generator.cc  resource_generator.h  typesafe_address.cc  typesafe_address.h
replay2/memory_remapper/tests/: memory_remapper_tests.cc
replay2/struct_factories/: BUILD.bazel
replay2/vulkan_base/: BUILD.bazel
vulkan_generator/: BUILD.bazel  DEVDOC.md  generator.py  main.py  vulkan_generator.py
(+1229 files in other folders)
